<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#ffffff">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginLeft="151dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:layout_marginBottom="265dp"
        android:text="@string/go_button"
        android:textColor="#130ac7"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="138dp"
        android:layout_height="150dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/gen"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/rest"
            />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/travel"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/gas"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/costco"/>

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="156dp"
        android:layout_height="58dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:text="@string/pick_type"
        android:textColor="#010641"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="70dp"
        android:layout_height="55dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="34dp"
        android:ems="10"
        android:hint="0.00"
        android:text="0.00"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="156dp"
        android:layout_height="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginBottom="93dp"
        android:text="@string/enter_amount"
        android:textColor="#010641"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

</androidx.constraintlayout.widget.ConstraintLayout>